# saber

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: Arquitectura Instruccional Matemáticas Saber 11.md  Diseño Instruccional Inglés.md  Diseño de Preguntas Saber 11 Matemáticas.md  RUNBOOK.md  TODO.md  arquitectura_simulador_saber11.md  estrategia_imagenes_saber11.md  ingles.md  integracion_kampus_produccion.md  matematicas.md  pendientes.md
docs/plans/: 2026-04-14-mvp-dashboard-estudiante-plan.md  2026-04-14-mvp-dashboard-estudiante-sprints.md  2026-04-19-ai-background-jobs-design.md  2026-04-20-question-blocks-design.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  styles.css  vite-env.d.ts
gateway/: Dockerfile  package.json  pnpm-lock.yaml
gateway/src/: index.js
nginx/: Dockerfile  entrypoint.sh  nginx.conf
nginx/conf.d/: saber11.conf
saber-11-design-system/: README.md  SKILL.md
saber-11-design-system/preview/: colors-brand.html  comp-badges.html  comp-buttons.html  comp-inputs.html  comp-table.html  spacing-shadows.html
shared/: pyproject.toml
shared/saber11_shared/: __init__.py  auth.py  config.py  database.py  events.py  health.py
tests/: pyproject.toml
tests/e2e/: conftest.py  test_01_health.py  test_02_auth.py  test_03_flows.py  test_04_security.py
tests/load/: load_test.js
(+231 files in other folders)
