[project]
name = "saber11-tests"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: pruebas end-to-end (requieren stack completo)",
    "load: pruebas de carga",
]
